force-app/main/default/objects/custom_create13__c/custom_create13__c.object-meta.xml
<CustomObject>
    <label>Custom created object13</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects13</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>