force-app/main/default/objects/custom_create13__c/fields/custom_create_13field550__c.field-meta.xml
<CustomField>
    <fullName>custom_create_13field550__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 13field550</label>
    <type>Checkbox</type>
</CustomField>